--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
@@ -1,4 +1,4 @@
-<div class="m-0">
+﻿<div class="m-0">
   <div class="row">
     <div class="card" style="background-color:gainsboro; margin-left: 15px;">
       <div style="padding-top:5px; padding-left:5px; padding-right:5px; padding-bottom:0px;">
@@ -20,7 +20,8 @@
         <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickDeleteKos()" class="btn btn-danger smalbutton" tooltip="Seçilenlerin KOS'larını Teletıp'tan sil"><fa name="trash"></fa></button>
         <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickUpdateReadKos()" class="btn btn-primary smalbutton" tooltip="Seçilenlerin KOS Durumlarını Teletıp'tan oku"><fa name="get-pocket"></fa></button>
         <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickReprocessKos()" class="btn btn-secondary smalbutton" tooltip="Reprocess Kos"><fa name="reply"></fa></button>
-        <button style="margin-right:0px;" (click)="gridKos.onClickExportExcel()" class="btn btn-primary smalbutton" tooltip="Excel'e çevir"><fa name="table"></fa></button>
+        <button  (click)="gridKos.onClickExportExcel()" class="btn btn-primary smalbutton" tooltip="Excel'e çevir"><fa name="table"></fa></button>
+        <button style="margin-right:0px;" [disabled]="gridKos.selectedItems.length !== 1" (click)="gridKos.onChangeAccesionNo()" class="btn btn-secondary smalbutton" tooltip="AccesionNo Değiştir"><fa name="pencil"></fa></button>
       </div>
     </div>
   </div>
