--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
@@ -21,7 +21,7 @@
         <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickUpdateReadKos()" class="btn btn-primary smalbutton" tooltip="Seçilenlerin KOS Durumlarını Teletıp'tan oku"><fa name="get-pocket"></fa></button>
         <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickReprocessKos()" class="btn btn-secondary smalbutton" tooltip="Reprocess Kos"><fa name="reply"></fa></button>
         <button (click)="gridKos.onClickExportExcel()" class="btn btn-primary smalbutton" tooltip="Excel'e çevir"><fa name="table"></fa></button>
-        <button style="margin-right:0px;" [disabled]="gridKos.selectedItems.length !== 1" (click)="gridKos.onChangeAccesionNo()" class="btn btn-secondary smalbutton" tooltip="AccessionNo Değiştir"><fa name="pencil"></fa></button>
+        <button style="margin-right:0px;" (click)="gridKos.onChangeAccesionNo()" class="btn btn-secondary smalbutton" tooltip="AccessionNo Değiştir"><fa name="pencil"></fa></button>
       </div>
     </div>
     <div>
