--- a/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.html
+++ b/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.html
@@ -26,7 +26,7 @@
                   <span class="labelText" style="font-size:13px;"> GİRİŞ </span>
                 </button>
                 <div class="text-center mt-2">
-                  <a routerLink="#" class="labelText">Şifremi unuttum</a>
+                  <a routerLink="#" class="labelText">Şifremi Unuttum</a>
                 </div>
               </form>
             </div>
@@ -34,7 +34,6 @@
         </div>
       </div>
   </div>
-
   <div>
     <div class="text-center mt-0">
       <a routerLink="#" class="infoText" style="color:black !important; opacity:0.7;">İletişim Bilgileri</a>
